ちょっと整理

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- CSSのリセットは A modern CSS reset を使用-->
 	<link rel="stylesheet" href="assets/css/reset.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
-	<!-- <link rel="stylesheet" href="assets/css/menu.css"> -->
+	<link rel="stylesheet" href="assets/css/navi.css">
 	<!-- <link rel="stylesheet" href="assets/css/page-xxx.css"> -->
 </head>
 
@@ -23,10 +23,6 @@
 		<p class="mainHeader_title">ブログ名</p>
 
 		<nav id="js-globalNavi" class="gnavi" aria-hidden="true">
-			<!-- <button aria-expanded="false" aria-controls="globalNavi" aria-label="メニューを閉じる" class="naviButton navi_close">
-				<span class="line" aria-hidden="true">
-				</span>
-			</button> -->
 			<span class="gnavi_label">MENU</span>
 			<ul>
 				<li><a href="/">TOP</a></li>
@@ -41,13 +37,12 @@
 			</span>
 		</button>
 	</header>
-	<!-- <script src="test.js"></script> -->
 
 	<div class="hero">
 		<figure class="hero_writer">
 			<picture class="writer_img">
 				<source type="image/webp" srcset="assets/images/hero_author.webp">
-				<img src="assets/images/hero_author.jpg" alt="">
+				<img src="assets/images/hero_author.jpg" alt="" loading="lazy" width="" height="">
 			</picture>
 			<figcaption class="writer_name">筆者</figcaption>
 		</figure>
@@ -61,7 +56,7 @@
 					<a href="/">
 						<picture class="item_img">
 							<source type="image/webp" srcset="assets/images/dummy.webp">
-							<img src="assets/images/dummy.jpg" alt="">
+							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="" height="">
 						</picture>
 					</a>
 					<div class="item_body">
@@ -74,7 +69,7 @@
 					<a href="/">
 						<picture class="item_img">
 							<source type="image/webp" srcset="assets/images/dummy.webp">
-							<img src="assets/images/dummy.jpg" alt="">
+							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="" height="">
 						</picture>
 					</a>
 					<div class="item_body">
@@ -87,7 +82,7 @@
 					<a href="/">
 						<picture class="item_img">
 							<source type="image/webp" srcset="assets/images/dummy.webp">
-							<img src="assets/images/dummy.jpg" alt="">
+							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="" height="">
 						</picture>
 					</a>
 					<div class="item_body">
@@ -100,7 +95,7 @@
 					<a href="/">
 						<picture class="item_img">
 							<source type="image/webp" srcset="assets/images/dummy.webp">
-							<img src="assets/images/dummy.jpg" alt="">
+							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="" height="">
 						</picture>
 					</a>
 					<div class="item_body">
@@ -113,7 +108,7 @@
 					<a href="/">
 						<picture class="item_img">
 							<source type="image/webp" srcset="assets/images/dummy.webp">
-							<img src="assets/images/dummy.jpg" alt="">
+							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="" height="">
 						</picture>
 					</a>
 					<div class="item_body">
@@ -135,6 +130,6 @@
 		<p>copyright</p>
 	</footer>
 
-<script src="assets/js/main.js" r></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
