筆者画像の表示を修正

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<figure class="hero_writer">
 			<picture class="writer_img">
 				<source type="image/webp" srcset="assets/images/hero_author.webp">
-				<img src="assets/images/hero_author.jpg" alt="" loading="lazy" width="" height="">
+				<img src="assets/images/hero_author.jpg" alt="" loading="lazy" width="401" height="267">
 			</picture>
 			<figcaption class="writer_name">筆者</figcaption>
 		</figure>
@@ -56,7 +56,7 @@
 					<a href="/">
 						<picture class="item_img">
 							<source type="image/webp" srcset="assets/images/dummy.webp">
-							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="" height="">
+							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="2560" height="1706">
 						</picture>
 					</a>
 					<div class="item_body">
@@ -69,7 +69,7 @@
 					<a href="/">
 						<picture class="item_img">
 							<source type="image/webp" srcset="assets/images/dummy.webp">
-							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="" height="">
+							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="2560" height="1706">
 						</picture>
 					</a>
 					<div class="item_body">
@@ -82,7 +82,7 @@
 					<a href="/">
 						<picture class="item_img">
 							<source type="image/webp" srcset="assets/images/dummy.webp">
-							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="" height="">
+							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="2560" height="1706">
 						</picture>
 					</a>
 					<div class="item_body">
@@ -95,7 +95,7 @@
 					<a href="/">
 						<picture class="item_img">
 							<source type="image/webp" srcset="assets/images/dummy.webp">
-							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="" height="">
+							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="2560" height="1706">
 						</picture>
 					</a>
 					<div class="item_body">
@@ -108,7 +108,7 @@
 					<a href="/">
 						<picture class="item_img">
 							<source type="image/webp" srcset="assets/images/dummy.webp">
-							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="" height="">
+							<img src="assets/images/dummy.jpg" alt="" loading="lazy" width="2560" height="1706">
 						</picture>
 					</a>
 					<div class="item_body">
