完成版にコメント追加

--- a/Complete/index.html
+++ b/Complete/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-
+<!-- Lesson01 -->
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,8 +17,9 @@
 	<link rel="stylesheet" href="./assets/css/navi.css">
 	<!-- <link rel="stylesheet" href="./assets/css/page-xxx.css"> -->
 </head>
-
+<!-- end Lesson01 -->
 <body>
+	<!-- Lesson02 -->
 	<header class="mainHeader">
 		<p class="mainHeader_title">ブログ名</p>
 
@@ -37,7 +38,9 @@
 			</span>
 		</button>
 	</header>
+	<!-- end Lesson02 -->
 
+	<!-- Lesson03 -->
 	<div class="hero">
 		<figure class="hero_writer">
 			<picture class="writer_img">
@@ -47,7 +50,9 @@
 			<figcaption class="writer_name">筆者</figcaption>
 		</figure>
 	</div>
+	<!-- end Lesson03 -->
 
+	<!-- Lesson04 -->
 	<main>
 		<section>
 			<h2 class="section_heading">最新の投稿</h2>
@@ -125,10 +130,13 @@
 		</section>
 
 	</main>
+	<!-- end Lesson04 -->
 
+	<!-- Lesson05 -->
 	<footer>
 		<p>copyright</p>
 	</footer>
+	<!-- end Lesson05 -->
 
 <script src="./assets/js/main.js"></script>
 </body>
